fixed bug with overflow text

--- a/app/assets/stylesheets/sitewide/dashboard.css.scss
+++ b/app/assets/stylesheets/sitewide/dashboard.css.scss
@@ -39,7 +39,7 @@
         position:relative;
         z-index: 1;
         transition:height 0.15s;
-        height: 45%;
+        height: auto;
         clear: left;
       }
       .media-price {
